# mathipy

./: .coverage  .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
docs/: .buildinfo  api.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  support.html
docs/_sources/: api.md.txt  getting-started.md.txt  index.md.txt  support.md.txt
docs/_sources/vignettes/: naep-demo.md.txt
docs/vignettes/: naep-demo.html
docs_src/: conf.py  index.md
mathipy/: __init__.py  _api.py  classifier.py  cognitive_load.py  item.py  math_content.py  ocr.py  readability.py  utils.py  visual.py
tests/: test_classifier.py  test_cognitive_load.py  test_data.py  test_item.py  test_math_content.py  test_ocr.py  test_ocr.py.tmp.29272.1770529965990  test_readability.py  test_utils_interrater.py  test_visual.py
